fix java 8 issue